infrastructure/base/vault-instance/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault
  namespace: vault
  annotations:
    kubernetes.io/ingress.class: kong
    cert-manager.io/cluster-issuer: letsencrypt-prod
    konghq.com/protocol: "https"
    konghq.com/preserve-host: "true"
spec:
  ingressClassName: kong
  rules:
    - host: vault.dmgiangi.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vault
                port:
                  number: 8200
  tls:
    - hosts:
        - vault.dmgiangi.dev
      secretName: vault-ingress-tls
